--- a/css/contact.css
+++ b/css/contact.css
@@ -1,34 +1,34 @@
 .contact h2 {
-  margin-bottom: 1.75rem;
   text-align: center;
-  padding-top: 1.75rem;
+  padding-top: var(--spacing-large);
 }
 
-.container p {
-  margin-bottom: 1.75rem;
+.contact h2,
+.contact .main-paragraph,
+.contact .contact-wrapper {
+  margin-bottom: var(--spacing-large);
 }
 
-.contact li {
+.contact .contact-wrapper {
   display: flex;
-  justify-content: space-between;
-
-  padding-bottom: 0.5rem;
-  margin-bottom: 1.75rem;
-
-  border-bottom: 1px solid var(--border-color);
-}
-
-.contact a {
-  font-size: 0.875rem;
-  color: #8e8e8e;
 }
 
 .contact ul,
 .contact form {
   width: 50%;
+  padding: var(--spacing-medium);
+
   display: flex;
   flex-direction: column;
-  padding: var(--spacing-medium);
+}
+
+.contact li {
+  padding-bottom: var(--spacing-small);
+  border-bottom: 1px solid var(--border-color);
+  margin-bottom: var(--spacing-large);
+
+  display: flex;
+  justify-content: space-between;
 }
 
 .contact .contact-wrapper p,
@@ -40,34 +40,93 @@
 }
 
 .contact .material-symbols-outlined {
+  color: var(--text-primary);
   vertical-align: middle;
+}
+
+.contact .contact-wrapper p:not(.description),
+.contact label,
+.contact input,
+.contact textarea {
+  color: var(--text-dark);
+}
+
+.contact a,
+.contact .description,
+.contact input::placeholder {
+  color: #8e8e8e;
+}
+
+.contact a:hover {
   color: var(--text-primary);
 }
 
-.contact-wrapper {
-  display: flex;
-  margin-bottom: 1.75rem;
+.contact label {
+  margin-bottom: var(--spacing-tiny);
 }
 
-.contact form,
-.contact ul {
-  width: 50%;
-
-  display: flex;
-  flex-direction: column;
-
-  padding: var(--spacing-medium);
+.contact input,
+.contact textarea {
+  padding: var(--spacing-small);
+  margin-bottom: var(--spacing-medium);
+  border: 1px solid var(--border-color);
+  border-radius: 5px;
 }
 
-/* form */
+.contact input:focus,
+.contact textarea:focus {
+  border-color: #8e8e8e;
+  outline: none;
+}
 
-.contact-form button {
+.contact textarea {
+  height: 100px;
+}
+
+.contact button {
+  background-color: var(--button-color);
+  color: var(--text-white);
   font-size: var(--fs-medium);
   text-align: center;
-  color: var(--text-white);
-  background-color: var(--button-color);
-  border: 1px solid var(--button-color);
+  border: 2px solid var(--button-color);
   border-radius: 5px;
   padding: var(--spacing-small);
+
   width: 100px;
+}
+
+.contact button:hover {
+  background-color: transparent;
+  color: var(--button-color);
+  border: 2px solid var(--button-color);
+}
+
+/* -------- media -------- */
+
+@media (max-width: 768px) {
+  .welcome h1 {
+    font-size: 2rem;
+  }
+
+  .contact .contact-wrapper {
+    flex-direction: column;
+  }
+
+  .contact ul,
+  .contact form {
+    width: 100%;
+    padding: 0;
+  }
+
+  .contact li {
+    margin-bottom: var(--spacing-medium);
+  }
+
+  .contact li:last-of-type {
+    margin-bottom: var(--spacing-large);
+  }
+
+  .contact button {
+    margin-bottom: 0;
+  }
 }
