--- a/css/home.css
+++ b/css/home.css
@@ -1,4 +1,3 @@
-/* Welcome section */
 .welcome {
   height: 100vh;
   width: 100%;
@@ -34,7 +33,6 @@
 
   margin-left: var(--spacing-medium);
 
-  /* Un bun exemplu de positionare relativa: mutam imaginile mai jos fata de pozitia lor initiala, pentru a arata mai bine. */
   position: relative;
   top: var(--spacing-tiny);
 }
@@ -43,7 +41,6 @@
   display: flex;
   flex-direction: column;
 
-  /* Vrem ca al nostru container sa ocupe tot spatiul disponibil. */
   flex-grow: 1;
 }
 
@@ -64,33 +61,6 @@
 
 .welcome a:hover {
   background-color: transparent;
-}
-
-@media (max-width: 768px) {
-  .welcome h1 {
-    font-size: 2.5rem;
-  }
-
-  /* Vrem ca ultimul paragraf sa nu aiba margine. */
-  .welcome p:last-of-type {
-    margin-bottom: 0;
-  }
-
-  .welcome img {
-    display: block;
-
-    margin-top: var(--spacing-medium);
-    margin-left: var(--spacing-small);
-  }
-
-  .welcome a {
-    /* Asundem butonul pe mobil. */
-    display: none;
-  }
-
-  .welcome {
-    padding-bottom: 4rem;
-  }
 }
 
 /* Couses section */
@@ -167,19 +137,6 @@
   padding: var(--spacing-medium) var(--spacing-small);
 }
 
-@media (max-width: 992px) {
-  .courses .course-wrapper {
-    width: 50%;
-  }
-}
-
-@media (max-width: 768px) {
-  .courses .course-wrapper {
-    width: 100%;
-  }
-}
-
-/* Who we are section */
 .who-we-are {
   background-color: var(--bg-secondary);
 }
@@ -223,18 +180,6 @@
   height: auto;
 }
 
-@media (max-width: 992px) {
-  .who-we-are .image-wrapper {
-    width: 50%;
-  }
-}
-
-@media (max-width: 768px) {
-  .who-we-are .image-wrapper {
-    width: 100%;
-  }
-}
-
 /* Partners section */
 .partners h2 {
   padding-top: var(--spacing-large);
@@ -249,7 +194,6 @@
 .partners .partners-container {
   display: flex;
   flex-wrap: wrap;
-  /* In cazul partenerilor, nu vrem ca imaginile sa se intinda pe tot randul, deci le spatiem cu justify-content: space-around. */
   justify-content: space-around;
 
   margin: 0 var(--spacing-xl);
@@ -266,17 +210,57 @@
 .partners img {
   width: 100%;
   height: auto;
-
-  /* Facem pozele gri. */
   filter: grayscale(100%);
 }
 
 .partners img:hover {
-  /* La hover, coloram din nou pozele. */
   filter: grayscale(0);
 }
 
+/* -------- media -------- */
+
+@media (max-width: 992px) {
+  .who-we-are .image-wrapper {
+    width: 50%;
+  }
+
+  .courses .course-wrapper {
+    width: 50%;
+  }
+}
+
 @media (max-width: 768px) {
+  .welcome h1 {
+    font-size: 2.5rem;
+  }
+
+  .welcome p:last-of-type {
+    margin-bottom: 0;
+  }
+
+  .welcome img {
+    display: block;
+
+    margin-top: var(--spacing-medium);
+    margin-left: var(--spacing-small);
+  }
+
+  .welcome a {
+    display: none;
+  }
+
+  .welcome {
+    padding-bottom: 4rem;
+  }
+
+  .who-we-are .image-wrapper {
+    width: 100%;
+  }
+
+  .courses .course-wrapper {
+    width: 100%;
+  }
+
   .partners .partners-container {
     margin: 0 var(--spacing-small);
   }
@@ -284,7 +268,6 @@
 
 @media (max-width: 576px) {
   .partners .image-wrapper {
-    margin-right: var(--spacing-medium);
-    margin-left: var(--spacing-medium);
+    margin: 0 var(--spacing-medium);
   }
 }
