--- a/css/home.css
+++ b/css/home.css
@@ -138,7 +138,7 @@
 }
 
 .who-we-are {
-  background-color: var(--bg-secondary);
+  background-color: var(--border-color);
 }
 
 .who-we-are .container.grid {
