--- a/css/main.css
+++ b/css/main.css
@@ -61,7 +61,6 @@ input[type="submit"] {
   opacity: 1;
 }
 
-/* Adaugam proprietati legate de font */
 body {
   font-family: "Poppins", sans-serif;
 }
@@ -82,7 +81,6 @@ p {
   font-size: var(--fs-medium);
 }
 
-/* Adaugam proprietati legate de culori */
 h1 {
   color: var(--text-light);
 }
@@ -121,7 +119,6 @@ main {
   flex-grow: 1;
 }
 
-/* Stilizeara nav-ului */
 nav {
   position: fixed;
   top: 0;
@@ -148,13 +145,8 @@ nav img {
   height: 60px;
 }
 
-/* Meniul si checkbox-ul sunt necesare doar pentru versiunea de mobile. */
 nav .menu-icon {
   color: var(--text-light);
-  display: none;
-}
-
-nav input[type="checkbox"] {
   display: none;
 }
 
@@ -168,7 +160,7 @@ nav li {
 
 nav a {
   font-size: var(--fs-small);
-  /* Transformam textul sa contina doar majuscule.*/
+
   text-transform: uppercase;
 
   color: var(--text-light);
@@ -212,20 +204,18 @@ nav .about-us:hover .submenu {
   display: block;
 }
 
-/* Stilizarea pentru mobile */
 @media (max-width: 768px) {
   nav img {
     height: var(--mobile-logo-height);
   }
 
-  /* Ascundem link-urile si afisam iconita de meniu, la pachet cu checkbox-ul.
-    De asemenea, ascundem submeniul (intrucat am avea nevoie de JS ca sa-l facem pe mobil) si iconita ce indica prezenta lui. */
   nav ul {
     display: none;
   }
 
   nav .menu-icon {
     display: block;
+    cursor: pointer;
   }
 
   nav .arrow-down-icon {
@@ -240,36 +230,10 @@ nav .about-us:hover .submenu {
     position: relative;
   }
 
-  /* Un nou tip de selector: sleectam input-ul care are ca atribut type="checkbox." */
-  nav input[type="checkbox"] {
-    /* Pe mobil checkbox-ul trebuie sa fie prezent pe ecran. */
-    display: block;
-
-    /* Practic, punem checkbox-ul deasupra iconitei de meniu. */
-    position: absolute;
-    top: 0;
-    left: 0;
-
-    height: 100%;
-    width: 100%;
-
-    /* Atentie, opacity 0 doar ascunde vizual elementul, ele inca este prezent pe ecran.*/
-    opacity: 0;
-
-    margin: 0;
-
-    /* Schimbam afisajul cursorului mouse-ului. */
-    cursor: pointer;
-  }
-
-  /* Doua tipuri noi de selector:
-    1. input:checked => elementul este stilizat doar daca checkbox-ul se afla in starea checked.
-    2. input:checked ~ ul => aplica CSS-ul doar pe FRATII (de acelasi nivel) lui input:checked aflati SUB el ca ordine. Evident, doar fratii care sunt ul. */
-  nav input[type="checkbox"]:checked ~ ul {
+  nav .dropdown-visible {
     display: block;
     width: 100%;
 
-    /* Cand vrem sa ne pozitionam absolut la viewport, folosim position: fixed. Position: absolute s-ar pozitiona fata de primul element relativ, ceea ce nu ne-ar ajuta. */
     position: fixed;
     /* Unde se afiseaza meniul extins pe mobil? Pai imediat sub nav. Cum calculam cat are nav-ul? Dimensiunea logo-ului + padding. */
     top: calc(var(--mobile-logo-height) + 2 * var(--spacing-medium));
